<resources>
    <string name="app_name">SpentWise</string>
    <string name="team_name">Powered by Team Alpha</string>
    <string name="placeHolder">TextString</string>
    <string name="categoryImageTitle">Category Images</string>
    <string name="analyticsActivityTitle">Analytics</string>
    <string name="entryFilterActivityTitle">Apply Filters</string>
    <string name="entryRepeatPatternActivityTitle">Set Repeat Pattern</string>
    <string name="helpActivityTitle">Help</string>
    <string name="mainActivityTitle">Home</string>
    <string name="notesActivityTitle">Budget Analysis</string>
    <string name="manageProjectActivityTitle">Select a Project</string>
    <string name="projectImageActivityTitle">Project Images</string>
    <string name="searchEntryActivityTitle">Transaction History</string>
    <string name="selectCategoryActivityTitle">Select a Category</string>
    <string name="selectCurrencyActivityTitle">Select a Currency</string>
    <string name="selectContactActivityTitle">Select a Contact</string>
    <string name="loginPage_tv_titleDescLabel">Your Personal Money Manager</string>
    <string name="loginPage_edt_emailHintLabel">Email Address</string>
    <string name="loginPage_edt_passwordHintLabel">Password</string>
    <string name="loginPage_btn_forgotPasswordLabel">Forgot Password?</string>
    <string name="loginPage_btn_loginLabel">LOGIN</string>
    <string name="loginPage_btn_registerUserLabel">NEW USER?</string>
    <string name="emptyEmailFieldError">Email ID cannot be blank</string>
    <string name="emptyPasswordFieldError">Password cannot be blank</string>
    <string name="loginSuccess">User logged in successfully</string>
    <string name="loginFailure">User log in failed</string>
    <string name="incorrectCredentialsError">Invalid username and password combination</string>
    <string name="registerUser_tv_titleLabel">Register New User</string>
    <string name="registerUser_edt_firstNameLabel">First Name</string>
    <string name="registerUser_edt_LastNameLabel">Last Name</string>
    <string name="registerUser_edt_emailLabel">Email Address</string>
    <string name="registerUser_edt_passwordLabel">Password</string>
    <string name="registerUser_edt_confirmPasswordLabel">Confirm Password</string>
    <string name="registerUser_btn_registerUserLabel">CREATE USER</string>
    <string name="registerUser_til_securityQuestionLabel">SECURITY QUESTION</string>
    <string name="registerUser_edt_securityQuestionAnswerLabel">Answer</string>
    <string name="noAlphabetInNameError">There should be at least 1 alphabet</string>
    <string name="specialCharacterError">This field can only contain alphabets and spaces</string>
    <string name="blankFieldError">This field cannot be blank</string>
    <string name="missingFieldsError">Please provide appropriate values in the above fields</string>
    <string name="invalidEmailIDError">Please provide a valid email ID</string>
    <string name="invalidPasswordError">Password must contain minimum 8 characters, with at least 1 letter, 1 number and 1 special character from (#?!@$%^&amp;*-).</string>
    <string name="passwordNotMatchingError">Passwords don\'t match</string>
    <string name="securityQuestionAnswerError">This field should only contain alphanumeric characters and spaces</string>
    <string name="userCreationSuccess">The user was created successfully</string>
    <string name="userCreationError">User creation failed</string>
    <string name="emailAlreadyExistsError">A user already exists with this email id</string>
    <string name="invalidDataError">Invalid Username, Security Question and Answer combination</string>
    <string name="validDataSuccessMessage">Please Set the new password</string>
    <string name="forgetPassword_tv_titleLabel">Forget Password</string>
    <string name="forgetPassword_edt_emailLabel">Email Address</string>
    <string name="forgetPassword_edt_passwordLabel">New Password</string>
    <string name="forgetPassword_edt_confirmPasswordLabel">Confirm New Password</string>
    <string name="forgetPassword_btn_validateLabel">CONFIRM</string>
    <string name="forgetPassword_btn_updatePasswordLabel">CHANGE PASSWORD</string>
    <string name="forgetPassword_til_securityQuestionLabel">SECURITY QUESTION</string>
    <string name="forgetPassword_edt_securityQuestionAnswerLabel">Answer</string>
    <string name="passwordUpdateSuccess">The password was created successfully</string>
    <string name="passwordUpdateError">Password update failed</string>
    <string name="manageProject_addNewProject">ADD NEW PROJECT</string>
    <string name="manageProject_btn_updateProjectLabel">EDIT PROJECT</string>
    <string name="manageProject_btn_deleteProjectLabel">DELETE PROJECT</string>
    <string name="deleteProjectPopupMessage">Are you sure you want to delete this Project?</string>
    <string name="deleteProjectConfirmationSuccess">TRANSACTION MODE DELETED SUCCESSFULLY</string>
    <string name="deleteProjectConfirmationError">TRANSACTION MODE DELETION FAILED</string>
    <string name="manageProject_tv_descLabel">You can manage multiple projects with different currencies.\nDouble click on an existing project to access it or click on Add button to add a new project</string>
    <string name="addUpdateProject_tv_addTitleLabel">CREATE NEW PROJECT</string>
    <string name="addUpdateProject_tv_updateTitleLabel">UPDATE PROJECT</string>
    <string name="addUpdateProject_btn_selectCurrencyLabel">SET CURRENCY</string>
    <string name="addUpdateProject_edt_projectNameHintLabel">PROJECT NAME</string>
    <string name="addUpdateProject_edt_projectStartAmountHintLabel">STARTING AMOUNT</string>
    <string name="addUpdateProject_btn_changeImageLabel">CHANGE IMAGE</string>
    <string name="addUpdateProject_edt_projectBudgetLabel">SET MONTHLY BUDGET</string>
    <string name="addUpdateProject_btn_saveCategoryButtonLabel">SAVE PROJECT</string>
    <string name="blankProjectNameError">Project Name cannot be blank</string>
    <string name="projectNameLengthError">Project Name length cannot be greater than 30</string>
    <string name="projectNameAlreadyExistsError">Project Name Already Exists</string>
    <string name="noCurrencySelected">Please select the default Currency</string>
    <string name="projectSuccess">Project added/updated successfully</string>
    <string name="projectError">Project add/update failed</string>
    <string name="addUpdateProject_til_transactionModeHint">ADD TRANSACTION MODES</string>
    <string name="addUpdateProject_edt_transactionModeHint">TRANSACTION MODE</string>
    <string name="invalidTransactionModeNameError">INVALID TRANSACTION MODE NAME</string>
    <string name="duplicateTransactionModeNameError">TRANSACTION MODE ALREADY EXISTS</string>
    <string name="noTransactionModeNameError">PLEASE SPECIFY AT LEAST ONE TRANSACTION MODE</string>
    <string name="addTransactionModeSuccess">TRANSACTION MODE ADDED SUCCESSFULLY</string>
    <string name="addTransactionModeError">TRANSACTION MODE ADDITION FAILED</string>
    <string name="deleteTransactionModePopupMessage">Are you sure you want to delete this Transaction Mode?</string>
    <string name="deleteTransactionModeConfirmationSuccess">TRANSACTION MODE DELETED SUCCESSFULLY</string>
    <string name="deleteTransactionModeConfirmationError">TRANSACTION MODE DELETION FAILED</string>
    <string name="changeCurrencyWarning">Note: Changing the currency of an existing project will update all the entries in the project</string>
    <string name="deleteTransactionHint">Click on a transaction mode to delete it</string>
    <string name="currencyConversionError">Currency Conversion Failed</string>
    <string name="main_btn_addNewEntryLabel">ADD NEW ENTRY</string>
    <string name="main_btn_searchEntryLabel">SEARCH AN ENTRY</string>
    <string name="optionsMenu_aboutLabel">ABOUT</string>
    <string name="optionsMenu_helpLabel">HELP</string>
    <string name="optionsMenu_exitLabel">EXIT</string>
    <string name="optionsMenu_logOutLabel">LOG OUT</string>
    <string name="main_navBar_homeLabel">HOME</string>
    <string name="main_navBar_addLabel">ADD</string>
    <string name="main_navBar_searchLabel">SEARCH</string>
    <string name="main_btn_analyticsLabel">ANALYTICS</string>
    <string name="main_noDataMessage">No Data to show on Graph. Please make an entry to initialize graph.</string>
    <string name="main_btn_exportDataLabel">EXPORT DATA AS CSV</string>
    <string name="main_btn_importDataLabel">IMPORT DATA FROM CSV</string>
    <string name="exportDataSuccess">Data export successful</string>
    <string name="exportDataFailure">Data export failed</string>
    <string name="exportDataPermissionDenied">Permission denied save to External storage</string>
    <string name="main_tv_balanceLabel">Current Balance</string>
    <string name="selectCategory_btn_selectedCategoryLabel">PROCEED</string>
    <string name="selectCategory_btn_addCategoryLabel">ADD NEW CATEGORY</string>
    <string name="selectCategory_btn_updateCategoryLabel">UPDATE CATEGORY</string>
    <string name="selectCategory_btn_deleteCategoryLabel">DELETE CATEGORY</string>
    <string name="category_btn_manageCategoriesLabel">MANAGE CATEGORIES</string>
    <string name="selectCategory_btn_moneyLentCategoryLabel">MONEY LENT</string>
    <string name="selectCategory_btn_moneyBorrowedCategoryLabel">MONEY BORROWED</string>
    <string name="deleteCategoryPopupMessage">Are you sure you want to delete this Category?</string>
    <string name="deleteCategoryConfirmationSuccess">CATEGORY DELETED SUCCESSFULLY</string>
    <string name="deleteCategoryConfirmationError">CATEGORY DELETION FAILED</string>
    <string name="blankCategoryNameError">Category Name cannot be blank</string>
    <string name="duplicateCategoryNameError">Category Name cannot be blank</string>
    <string name="addCategoryConfirmationSuccess">Category Added Successfully</string>
    <string name="updateCategoryConfirmationSuccess">Category Updated Successfully</string>
    <string name="permissionNotGranted">Permission Denied</string>
    <string name="permissionGranted">Permission Granted</string>
    <string name="addNewEntry_tv_selectedCategoryLabel">SELECTED CATEGORY </string>
    <string name="addNewEntry_tv_setAmountLabel">ENTER AMOUNT:</string>
    <string name="addEntry_edt_enterAmountLabel">AMOUNT</string>
    <string name="addEntry_tv_setDateLabel">DATE:</string>
    <string name="addEntry_btn_setDateLabel">DATE</string>
    <string name="addEntry_tv_selectTransactionModeLabel">SELECT TRANSACTION MODE:</string>
    <string name="addEntry_tv_selectTransactionTypeLabel">SELECT TRANSACTION TYPE:</string>
    <string name="manageEntry_chkBx_repeatLabel">REPEAT TRANSACTION</string>
    <string name="manageEntry_btn_repeatLabel">SET REPEAT PATTERN</string>
    <string name="addEntry_tv_addCommentLabel">Comment:</string>
    <string name="addEntry_edt_addCommentHintLabel">Enter Comments(Optional)</string>
    <string name="addEntry_btn_submitEntry">SUBMIT</string>
    <string name="invalidAmountError">Invalid Amount</string>
    <string name="weeklyRepeat_tv_repeatLabel">REPEAT EVERY</string>
    <string name="repeatWeekly_tv_repeatAfterLabel">WEEK(s)</string>
    <string name="weeklyRepeat_chk_day0Label">SUNDAY</string>
    <string name="weeklyRepeat_chk_day1Label">MONDAY</string>
    <string name="weeklyRepeat_chk_day2Label">TUESDAY</string>
    <string name="weeklyRepeat_chk_day3Label">WEDNESDAY</string>
    <string name="weeklyRepeat_chk_day4Label">THURSDAY</string>
    <string name="weeklyRepeat_chk_day5Label">FRIDAY</string>
    <string name="weeklyRepeat_chk_day6Label">SATURDAY</string>
    <string name="analytics_tab_budgetLabel">Budget</string>
    <string name="analytics_tab_pieChartLabel">Category Spread</string>
    <string name="analytics_tab_statsLabel">Statistics</string>
</resources>