<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/analytics_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/about_include"
        layout="@layout/layout_toolbar_secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/analytics_tabLayout"
        style="@style/MyTabLayoutTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_include">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/analytics_tab_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/analytics_tab_budgetLabel" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/analytics_tab_pieChart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/analytics_tab_pieChartLabel" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/analytics_tab_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/analytics_tab_statsLabel" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/analytics_viewPager"
        style="@style/LayoutTheme_level_0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/analytics_tabLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>