<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/repeatWeekly_layout"
    style="@style/LayoutTheme_level_2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/weeklyRepeat_VerticalGuideline_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/weeklyRepeat_VerticalGuideline_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.44" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/weeklyRepeat_VerticalGuideline_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.67" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/weeklyRepeat_VerticalGuideline_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/weeklyRepeat_VerticalGuideline_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.36" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/weeklyRepeat_VerticalGuideline_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.68" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/weeklyRepeat_VerticalGuideline_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/weeklyRepeat_HorizontalGuideline_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/weeklyRepeat_HorizontalGuideline_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="60dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/weeklyRepeat_HorizontalGuideline_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="72dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/weeklyRepeat_HorizontalGuideline_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="116dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/weeklyRepeat_HorizontalGuideline_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="128dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/weeklyRepeat_HorizontalGuideline_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="172dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/weeklyRepeat_HorizontalGuideline_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="184dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/weeklyRepeat_HorizontalGuideline_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="228dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/weeklyRepeat_HorizontalGuideline_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="244dp" />

    <TextView
        android:id="@+id/weeklyRepeat_tv_repeat"
        style="@style/TextViewThemeLeftBlack"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:text="@string/weeklyRepeat_tv_repeatLabel"
        app:layout_constraintBottom_toTopOf="@+id/weeklyRepeat_HorizontalGuideline_2"
        app:layout_constraintEnd_toStartOf="@+id/weeklyRepeat_VerticalGuideline_2"
        app:layout_constraintStart_toStartOf="@+id/weeklyRepeat_VerticalGuideline_1"
        app:layout_constraintTop_toTopOf="@+id/weeklyRepeat_HorizontalGuideline_1" />

    <EditText
        android:id="@+id/weeklyRepeat_edt_repeatInterval"
        style="@style/EditTextTheme"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintBottom_toTopOf="@+id/weeklyRepeat_HorizontalGuideline_2"
        app:layout_constraintEnd_toStartOf="@+id/weeklyRepeat_VerticalGuideline_3"
        app:layout_constraintStart_toStartOf="@+id/weeklyRepeat_VerticalGuideline_2"
        app:layout_constraintTop_toTopOf="@+id/weeklyRepeat_HorizontalGuideline_1" />

    <TextView
        android:id="@+id/repeatWeekly_tv_repeatAfter"
        style="@style/TextViewThemeLeftBlack"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:text="@string/repeatWeekly_tv_repeatAfterLabel"
        app:layout_constraintBottom_toTopOf="@+id/weeklyRepeat_HorizontalGuideline_2"
        app:layout_constraintEnd_toStartOf="@+id/weeklyRepeat_VerticalGuideline_7"
        app:layout_constraintStart_toStartOf="@+id/weeklyRepeat_VerticalGuideline_3"
        app:layout_constraintTop_toTopOf="@+id/weeklyRepeat_HorizontalGuideline_1" />

    <CheckBox
        android:id="@+id/weeklyRepeat_chk_day1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/weeklyRepeat_chk_day0Label"
        app:layout_constraintBottom_toTopOf="@+id/weeklyRepeat_HorizontalGuideline_4"
        app:layout_constraintEnd_toStartOf="@+id/weeklyRepeat_VerticalGuideline_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/weeklyRepeat_HorizontalGuideline_3" />

    <CheckBox
        android:id="@+id/weeklyRepeat_chk_day2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/weeklyRepeat_chk_day1Label"
        app:layout_constraintBottom_toTopOf="@+id/weeklyRepeat_HorizontalGuideline_4"
        app:layout_constraintEnd_toStartOf="@+id/weeklyRepeat_VerticalGuideline_3"
        app:layout_constraintStart_toStartOf="@+id/weeklyRepeat_VerticalGuideline_5"
        app:layout_constraintTop_toTopOf="@+id/weeklyRepeat_HorizontalGuideline_3" />

    <CheckBox
        android:id="@+id/weeklyRepeat_chk_day3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/weeklyRepeat_chk_day2Label"
        app:layout_constraintBottom_toTopOf="@+id/weeklyRepeat_HorizontalGuideline_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/weeklyRepeat_VerticalGuideline_6"
        app:layout_constraintTop_toTopOf="@+id/weeklyRepeat_HorizontalGuideline_3" />

    <CheckBox
        android:id="@+id/weeklyRepeat_chk_day4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/weeklyRepeat_chk_day3Label"
        app:layout_constraintBottom_toTopOf="@+id/weeklyRepeat_HorizontalGuideline_6"
        app:layout_constraintEnd_toStartOf="@+id/weeklyRepeat_VerticalGuideline_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/weeklyRepeat_HorizontalGuideline_5" />

    <CheckBox
        android:id="@+id/weeklyRepeat_chk_day6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/weeklyRepeat_chk_day5Label"
        app:layout_constraintBottom_toTopOf="@+id/weeklyRepeat_HorizontalGuideline_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/weeklyRepeat_VerticalGuideline_6"
        app:layout_constraintTop_toTopOf="@+id/weeklyRepeat_HorizontalGuideline_5" />

    <CheckBox
        android:id="@+id/weeklyRepeat_chk_day5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/weeklyRepeat_chk_day4Label"
        app:layout_constraintBottom_toTopOf="@+id/weeklyRepeat_HorizontalGuideline_6"
        app:layout_constraintEnd_toStartOf="@+id/weeklyRepeat_VerticalGuideline_3"
        app:layout_constraintStart_toStartOf="@+id/weeklyRepeat_VerticalGuideline_5"
        app:layout_constraintTop_toTopOf="@+id/weeklyRepeat_HorizontalGuideline_5" />

    <CheckBox
        android:id="@+id/weeklyRepeat_chk_day7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/weeklyRepeat_chk_day6Label"
        app:layout_constraintBottom_toTopOf="@+id/weeklyRepeat_HorizontalGuideline_8"
        app:layout_constraintEnd_toStartOf="@+id/weeklyRepeat_VerticalGuideline_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/weeklyRepeat_HorizontalGuideline_7" />

</androidx.constraintlayout.widget.ConstraintLayout>